No-js fixes for collapsed blog post

--- a/source/sass/component/blog/_post.scss
+++ b/source/sass/component/blog/_post.scss
@@ -153,6 +153,19 @@
     }
 }
 
+.no-js .post-collapsed article {
+    max-height: none;
+    overflow: auto;
+
+    &:hover {
+        cursor: auto;
+    }
+
+    &::after {
+        display: none;
+    }
+}
+
 .post + .post {
     margin-top: $content-gutter * 2;
 }
